--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "prebuild": "rimraf dist",
     "build": "tsc",
     "postbuild": "cpy src/assets/.editorconfig dist/assets",
-    "release": "release-it"
+    "release": "npm run build && release-it"
   },
   "devDependencies": {
     "@types/node": "^13.1.8",
